@@ -2,3 +2,5 @@
 .eggs/
 .tox/
 service_integration_engine.egg-info/
+*.pyc
+*.egg-info/
