@@ -16,6 +16,4 @@
 
 import setuptools
 
-setuptools.setup(
-    setup_requires=['pbr>=0.6,!=0.7,<1.0'],
-    pbr=True)
+setuptools.setup()
