@@ -1,4 +1,3 @@
-pytest
 pep8!=1.6.0,!=1.6.1,!=1.6.2,>=1.5.7
 pytest-pep8
 pytest-flake8
