@@ -1,7 +1,12 @@
 [tox]
-envlist = pep8
+envlist = py27,pep8
+
+[testenv:py27]
+deps = nose
+       -rrequirements.txt
+commands = nosetests -v
 
 [testenv:pep8]
 deps = flake8>=1.5.7
        pep8-naming
-commands = flake8 -v {posargs}
+commands = flake8 -v engine
